[package]
name = "bulletproof"
version = "0.1.0"
authors = ["Jeehoon Kang <jeehoon.kang@sf.snu.ac.kr>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jeehoonkang/bulletproof-rs"
homepage = "https://github.com/jeehoonkang/bulletproof-rs"
documentation = "https://docs.rs/bulletproof"
description = "Bulletproof load from memory"
keywords = ["sigsegv"]
categories = ["unix", "signal", "memory-management"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
