[package]
name = "bulletproof"
version = "0.2.0"
authors = ["Jeehoon Kang <jeehoon.kang@sf.snu.ac.kr>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jeehoonkang/bulletproof-rs"
homepage = "https://github.com/jeehoonkang/bulletproof-rs"
documentation = "https://docs.rs/bulletproof"
description = "Bulletproof memory access"
keywords = ["unix", "signal", "sigsegv"]
categories = ["memory-management"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
